# rt-kernel

./: .gitignore  README.md
Documents/: kernel_setup_and_realtime_guide.md  test.md  test_execution_scenario.md
Documents/goal_tmp/: 00_-_Custom_linux_kernel.md
Tools/led-toggle/: CMakeLists.txt  led-toggle.c  setup.sh
kernel/: config.env  configure.sh  install.sh  make.sh  setup.sh
kernel/helper_remote/: pin-usb-irq.service  pin-usb-irq.sh  switch-kernel.sh
local/: .env  .env_setup  requirements.txt  run_test.sh  setup.sh
local-rtk/: .env  .sshpass  requirements.txt  run_test.sh
local-rtk/processing/: experiment.py  linux.py  models.py  plots.py  processing.py  run_test.py  saleae.py  sandbox.ipynb
local-rtk/saleae/: measurement.py  processing.py  processing_custom.ipynb  processing_plots.py  processing_utils.py
local/saleae/: measurement.py  processing.ipynb  processing.py  processing_custom.ipynb  processing_utils.py
remote-rtk/: .env  .env_setup  run_test.sh  setup.sh  test_start.sh
remote-rtk/led-toggle/: CMakeLists.txt  led-toggle.c  setup.sh
remote-rtk/test-exec/: .env  test_exec.sh  test_start.sh  test_state.sh
remote/Tools/led-toggle/: build.sh  led-toggle.c  setup.sh
